# zfntools-python

./: .gitignore  README.md  build.ps1  hotkey_manager.py  main.py  main_window.py  out.txt  plugin_system.py  pyproject.toml  search_engine.py  search_workers.py  settings_manager.py  start.ahk  start_pyinstaller.ahk
.trae/rules/: project_rules.md
data/: settings.json
data/plugins/folder_organizer/: config.json
plugins/CyberChef/: manifest.json
plugins/base_converter/: tool.py
plugins/color_picker/: tool.py
plugins/emoji/: manifest.json
plugins/emoji/javascripts/: stuff.js
plugins/folder_organizer/: tool.py
plugins/quick_shutdown/: tool.py
plugins/start_menu_search/: tool.py
