[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-toolbox"
version = "0.2.0"
description = "A multi-tab toolbox application with extensible plugins supporting widget, action, search, and web plugins."
requires-python = ">=3.13"
dependencies = [
    "PySide6",
    "pypinyin",
    "pynput",
    "nuitka>=2.7.13",
    "pyinstaller>=6.15.0",
    "global-hotkeys",
]

[tool.setuptools.packages.find]
exclude = ["data*"]
